# hyundai-steel-crane-automation-system

./: .gitignore  CMakeLists.txt  README.md  data_loader.py  main.py  package.xml  requirements.txt  sam2_wrapper.py  utils.py
config/: config.yaml  config2.yaml
docs/: .~lock.후판제품 크레인 자동화 크레인, 폭길이 시스템 IF 전문 20251212.xlsx#  후판제품 크레인 자동화 크레인, 폭길이 시스템 IF 전문 20251212.xlsx
launch/: crane.launch.py
modules/: main.py  utils.py
msg/: ACWL0001Body.msg  HeadCR.msg  WLAC0001Body.msg
params/: intrinsic2.csv  transform2.txt
src/: acwl_client.py  data_logger.py  ftp_uploader.py  inference_node.py  main.py  protocol_parser.py  socket_node.py  visualizer.py  wlac_client.py  wlac_server.py
src/sam2/sam2/utils/: misc.py
srv/: ACWL0001.srv  WLAC0001.srv
